[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/Scripting/ScriptingNode.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 0.341, 0.22, 0.44, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 0.4785, 0.29, 0.58, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="ScriptingNode" type="GraphNode"]
margin_right = 150.0
margin_bottom = 40.0
rect_min_size = Vector2( 150, 0 )
custom_constants/port_offset = 0
custom_constants/separation = 4
custom_styles/frame = SubResource( 2 )
custom_styles/selectedframe = SubResource( 1 )
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 1 )

[node name="TitleHBC" type="HBoxContainer" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 146.0
margin_bottom = 36.0
custom_constants/separation = 8

[node name="TitleIcon" type="TextureRect" parent="TitleHBC"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="TitleLabel" type="Label" parent="TitleHBC"]
margin_left = 40.0
margin_top = 9.0
margin_right = 76.0
margin_bottom = 23.0
text = "Titulo"
